--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,32 @@ body {
     font-family: 'Fredoka', sans-serif;
 }
 
+.clear-fix::after {
+content: "";
+display: table;
+clear: both;
+}
+
 header h1 {
     color: #b72c5d;
     text-align: center;
     font-size: 50px;
     padding-top: 30px;
+}
+
+main{
+    margin: 0 auto;
+    max-width: 1000px;
+    padding-top: 30px;
+}
+
+main .description {
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.card {
+    background-color: black;
+    width: calc(33% - 20px);
+    height: 100px;
 }
